--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="problem-card-id">Problem #${(currentPage - 1) * PROBLEMS_PER_PAGE + idx + 1}</div>
             <h2 class="problem-card-title">${escapeHtml(p.title)}</h2>
             <div class="problem-card-meta">
-              <span>Source paper: ${escapeHtml(p.source_paper || p.paper_id || "")}</span>
+              <span>Source: ${formatSourcePaper(p)}</span>
             </div>
           </a>
         </li>
@@ -84,6 +84,15 @@
       const div = document.createElement('div');
       div.textContent = String(text ?? "");
       return div.innerHTML;
+    }
+
+    function formatSourcePaper(p) {
+      const title = escapeHtml(p.source_paper_title || p.source_paper || p.paper_id || "");
+      const url = p.source_paper_url || "";
+      if (url) {
+        return `<a href="${escapeHtml(url)}" target="_blank" rel="noopener">${title}</a>`;
+      }
+      return title;
     }
 
     async function loadProblems() {
