Simplify WIP warning to just 'Work in Progress'
Made-with: Cursor

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <main>
     <div class="wip-warning" role="alert" style="background-color: #fef08a; border: 2px solid #f59e0b; color: #92400e; padding: 1rem 1.5rem; border-radius: 8px;">
-      <strong>Work in progress.</strong> All the open problems here are merely LLM generated placeholder text and are potentially nonsensical.
+      Work in Progress
     </div>
     <ul class="problem-list" id="problem-list">
       <!-- Populated by JavaScript -->
